--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "scripts": {
         "dev": "vite",
         "build": "vue-tsc --noEmit && vite build",
-         "build-css": "tailwindcss -i ./resources/css/input.css -o ./resources/css/app.css -w"
+        "build-css": "tailwindcss -i ./resources/css/input.css -o ./resources/css/app.css -w"
     },
     "devDependencies": {
         "@vitejs/plugin-vue": "^5.0.4",
@@ -30,6 +30,7 @@
         "vue-sweetalert2": "^5.0.10",
         "vue-toast-notification": "^3.1.2",
         "vue3-apexcharts": "^1.5.3",
+        "y-webrtc": "^10.3.0",
         "y-websocket": "^2.0.4",
         "yjs": "^13.6.19"
     }
