--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "vue-sweetalert2": "^5.0.10",
         "vue-toast-notification": "^3.1.2",
         "vue3-apexcharts": "^1.5.3",
+        "y-indexeddb": "^9.0.12",
         "y-webrtc": "^10.3.0",
         "y-websocket": "^2.0.4",
         "yjs": "^13.6.19"
